feat: adicionado endpoint para upload de imagens
